crates/uitest/fixtures/ty_check/method_selection/require_explicit_import.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/method_selection/require_explicit_import.fe
---
error[8-0028]: trait is not in the scope
  ┌─ require_explicit_import.fe:2:7
  │
2 │     x.foo()
  │       ^^^
  │       │
  │       consider importing one of the following traits into the scope to resolve the ambiguity
  │       `use require_explicit_import::inner::Foo`
  │       `use require_explicit_import::inner::Bar`
